fix: adjust padding for last product image on mobile view

--- a/src/modules/products/ui/product-details/product-details.module.scss
+++ b/src/modules/products/ui/product-details/product-details.module.scss
@@ -11,8 +11,10 @@
 
 .productImage {
   border-radius: unset;
-  &:last-child{
+  @media (max-width: 768px) {
+    &:last-child{
       padding-bottom: 200px;
+  }
   }
 }
 
